@@ -14,6 +14,7 @@
         - Added select box option for multiable domains in login.php
         - Fixed proxy server support for headlines and check for new version on main screen.
         - Fixed headlines preferences and converted headline preferences to a template
+	- Fixed pgsql upgrade from beta path.
 
 [0.9.7] - Fixed SQL error in tts
         - Fixed table locking in admin -> edit account
